early 2.0 swap